# Fluxer.RUST

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
builders/: Cargo.toml
builders/src/: attachment.rs  embed.rs  file.rs  lib.rs  message.rs
core/: Cargo.toml
core/src/: error.rs  events.rs  lib.rs
core/src/client/: channel_manager.rs  client_impl.rs  event_parser.rs  guild_manager.rs  guild_member_manager.rs  mod.rs  typed_events.rs  users_manager.rs
core/src/collectors/: message_collector.rs  mod.rs  reaction_collector.rs
core/src/structures/: channel.rs  client_user.rs  guild.rs  guild_ban.rs  guild_emoji.rs  guild_member.rs  guild_sticker.rs  invite.rs  message.rs  message_reaction.rs  mod.rs  role.rs  typed_channel.rs  user.rs  webhook.rs
core/src/util/: cdn.rs  mod.rs  permissions.rs
poll/: Cargo.toml
poll/src/: lib.rs
rest/: Cargo.toml
rest/src/: client.rs  error.rs  lib.rs  rate_limit.rs
src/: enums.rs  error.rs  flags.rs  id.rs  lib.rs  tri.rs  union.rs
src/cache/: mod.rs  model.rs  permission.rs  policy.rs  store.rs  updater.rs
src/client/: mod.rs
src/events/: mod.rs  pipeline.rs
src/gateway/: client.rs  dispatch.rs  mod.rs  rate_limiter.rs  transport.rs
src/http/: admin.rs  applications.rs  auth.rs  channels.rs  client.rs  discovery.rs  donations.rs  endpoint.rs  gateway.rs  gifts.rs  guilds.rs  interactions.rs  invites.rs  klipy.rs  members.rs  messages.rs  mod.rs  packs.rs  premium.rs  rate_limiter.rs  read_states.rs  reports.rs  roles.rs  search.rs  streams.rs  stripe.rs  tenor.rs  users.rs  webhooks.rs  well_known.rs
src/oauth2/: mod.rs
src/ser/: mod.rs
src/voice/: mod.rs
src/webhook/: mod.rs
tests/: contract_invites.rs  contract_oauth2_auth.rs  contract_users_core.rs  contract_webhooks.rs  rest_core.rs
types/: Cargo.toml
types/src/: ban.rs  channel.rs  embed.rs  emoji.rs  errors.rs  gateway.rs  guild.rs  instance.rs  interaction.rs  invite.rs  lib.rs  message.rs  role.rs  routes.rs  snowflake.rs  sticker.rs  user.rs  webhook.rs
util/: Cargo.toml
util/src/: emoji.rs  formatters.rs  lib.rs  permissions.rs  resolvers.rs  snowflake.rs  tenor.rs
voice/: Cargo.toml
voice/src/: connection.rs  error.rs  lib.rs  manager.rs  pcm.rs
ws/: Cargo.toml
ws/src/: events.rs  lib.rs  manager.rs  shard.rs
