[package]
name = "fluxer-rust"
version = "0.1.0-beta.1"
edition = "2024"

[dependencies]
bitflags = { version = "2.6", features = ["serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
flate2 = "1"
zstd = "0.13"
dashmap = "6"

[dev-dependencies]
wiremock = "0.6"
