[workspace]
resolver = "2"
members = [
    "types",
    "rest",
    "ws",
    "core",
    "builders",
    "util",
    "voice",
]

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/DeviMorris/Fluxer.RUST"
homepage = "https://github.com/DeviMorris/Fluxer.RUST"
documentation = "https://docs.devimorris.tech"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
thiserror = "2"
tracing = "0.1"
bitflags = "2"
dashmap = "6"
futures-util = "0.3"
