[package]
name = "fluxer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluxer-types = { path = "../types" }
fluxer-rest = { path = "../rest" }
fluxer-ws = { path = "../ws" }
fluxer-builders = { path = "../builders" }
fluxer-util = { path = "../util" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
