[package]
name = "fluxer-rest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluxer-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
