[package]
name = "fluxer-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared API types and route definitions for the Fluxer bot framework"
keywords = ["fluxer", "discord", "bot", "api", "types"]
categories = ["api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
