[package]
name = "fluxer-util"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Utility helpers for the Fluxer bot framework (CDN, permissions, emoji resolvers)"
keywords = ["fluxer", "discord", "bot", "utility"]
categories = ["api-bindings"]

[dependencies]
serde = { workspace = true }
bitflags = { workspace = true }
