[package]
name = "fluxer-voice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluxer-types = { path = "../types" }
fluxer-rest = { path = "../rest" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
