[package]
name = "fluxer-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Voice connection and audio playback for Fluxer bots"
keywords = ["fluxer", "discord", "bot", "voice", "audio"]
categories = ["api-bindings", "multimedia::audio"]

[dependencies]
fluxer-types = { path = "../types", version = "0.2.3" }
livekit = { version = "0.7.32", features = ["rustls-tls-native-roots"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "flac", "vorbis", "wav", "pcm", "ogg", "isomp4", "adpcm"] }
tokio = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
