[package]
name = "fluxer-ws"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluxer-types = { path = "../types" }
fluxer-rest = { path = "../rest" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
native-tls = "0.2"
