[package]
name = "fluxer-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebSocket gateway client for the Fluxer bot API"
keywords = ["fluxer", "discord", "bot", "websocket", "gateway"]
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
fluxer-types = { path = "../types", version = "0.1" }
fluxer-rest = { path = "../rest", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
native-tls = "0.2"
